fix: remove grid layout on mobile homepage

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -9,12 +9,6 @@ html {
     font-size: clamp(14px, 2vw, 20px);
 }
 body {
-    display: grid;
-    grid-template-rows: -webkit-min-content auto -webkit-min-content -webkit-min-content;
-    grid-template-rows: min-content auto min-content min-content;
-    grid-template-areas: "header" "content" "icons";
-    height: 100vh;
-    overflow: hidden;
     color: var(--clr-fg-100);
     font-family: 'Gideon Roman', cursive;
     font-size: 1rem;
@@ -31,11 +25,11 @@ h3 {
 }
 @media (min-width: 768px) {
     body {
+        display: grid;
         grid-template-areas:
             "ch-left header  header  header  header  header  header  header  header  search  search  search   icons   ch-right"
             "nav     nav     nav     nav     nav     nav     nav     nav     nav     nav     nav     nav     nav     nav"
             "content content content content content content content content content content content content content content";
-        height: revert;
         overflow: revert;
         grid-template-columns: var(--content-padding) repeat(12, 1fr) var(--content-padding);
     }
@@ -441,7 +435,6 @@ h3 {
 
 :root {
     --product-tile-width: 140px;
-    --lala: 602px;
 }
 .product-list {
     display: grid;
